--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 </div>
 
 <div id="result">
-  <p id="fastresult">“Fast and outstanding resutls. Edie understands <br>their customer’s needs. They have a young <br>and talented team.”    </p>
+  <p id="fastresult">“Fast and outstanding results. Edie understands <br>their customer’s needs. They have a young <br>and talented team.”    </p>
 </div>
 
 <div id="carlos">
