footer and padding

--- a/index.html
+++ b/index.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, intitial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+<head>
 
-  </head>
-  <body>
-    <div id="body">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, intitial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+
+</head>
+
+<body>
+  <div id="body">
     <div class="head">
       <p class="edie">Edie</p>
     </div>
 
     <div id="services">
-          <p class="service">Home</p>
+      <p class="service">Home</p>
 
-          <p class="service">Services</p>
+      <p class="service">Services</p>
 
-          <p class="service">Our Works</p>
+      <p class="service">Our Works</p>
 
-          <p class="service">Clients</p>
+      <p class="service">Clients</p>
 
-          <p class="service">Contacts</p>
+      <p class="service">Contacts</p>
     </div>
 
     <div id="menucon">
@@ -38,7 +40,7 @@
     </div>
 
     <div id="first-image">
-      <img  id="first" src="heroImage.jpg">
+      <img id="first" src="heroImage.jpg">
     </div>
 
     <div id="story">
@@ -46,281 +48,285 @@
     </div>
 
     <div id="transform">
-      <p id="transformation">We help transform your ideas into real <br>world applications that will outperform <br>your toughest competition and help you <br>achieve your strategic goals in short <br>period of time.</p>
-    </div>
-    
-
-  <div class="contact">
-
-    <div class="outreach">
-      <label  class="email" for="Email">Want us to contact you?<input placeholder="Email" id="Email" name="Email"
-        class="block" type="email" required /></label>
-    </div>
-    <div id="join">
-      <input id="Join" type="submit" value="Join">
-      <!-- <p id="Join">Join</p> -->
+      <p id="transformation">We help transform your ideas into real <br>world applications that will outperform <br>your
+        toughest competition and help you <br>achieve your strategic goals in short <br>period of time.</p>
     </div>
 
-  </div>
-   
-  <div id="offers">
-    <p id="offer">We offer high <br>demand services</p>
-  </div>
 
-<div id="all">
+    <div class="contact">
 
-  <div id="editcon">
+      <div class="outreach">
+        <label class="email" for="Email">Want us to contact you?<input placeholder="Email" id="Email" name="Email"
+            class="block" type="email" required /></label>
+      </div>
+      <div id="join">
+        <input id="Join" type="submit" value="Join">
+        <!-- <p id="Join">Join</p> -->
+      </div>
 
-         <div id="editcontainer">
-              <img  id="edit" src="edit.png">
-          </div>
+    </div>
 
-          <div id="ui">
-              <p id="ux">UI/UX Design</p>
-          </div>
+    <div id="offers">
+      <p id="offer">We offer high <br>demand services</p>
+    </div>
+
+    <div id="all">
+
+      <div id="editcon">
+
+        <div id="editcontainer">
+          <img id="edit" src="edit.png">
+        </div>
+
+        <div id="ui">
+          <p id="ux">UI/UX Design</p>
+        </div>
 
         <div class="lorem">
-              <p class="ipsum">Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit. Duis a<br>metus ac nulla consequat aliquet<br>id quis turpis.</p>
+          <p class="ipsum">Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit. Duis a<br>metus ac nulla
+            consequat aliquet<br>id quis turpis.</p>
         </div>
 
         <div class="getstarted">
-            <p class="started">Get started</p>
+          <p class="started">Get started</p>
         </div>
 
-  </div>
+      </div>
 
 
-  <div id="frontendcontainer">
-          <div id="frontendicon">
-              <img  id="front" src="code.png">
-          </div>
+      <div id="frontendcontainer">
+        <div id="frontendicon">
+          <img id="front" src="code.png">
+        </div>
 
-          <div id="frontend">
-                <p id="fr">Front End</p>
-          </div>
+        <div id="frontend">
+          <p id="fr">Front End</p>
+        </div>
 
-           <div  id="lr" class="lorem">
-                  <p class="ipsum">Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit. Duis a<br>metus ac nulla consequat aliquet<br>id quis turpis.</p>
-            </div>
+        <div id="lr" class="lorem">
+          <p class="ipsum">Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit. Duis a<br>metus ac nulla
+            consequat aliquet<br>id quis turpis.</p>
+        </div>
 
-          <div  id="str" class="getstarted">
-                  <p id="secondgetstarted" class="started">Get started</p>
-          </div>
+        <div id="str" class="getstarted">
+          <p id="secondgetstarted" class="started">Get started</p>
+        </div>
 
-  </div>
+      </div>
 
-  <div id="back">
+      <div id="back">
 
-            <div id="storage">
-                  <img  id="address" src="storage.png">
-            </div>
-  
-
-          <div id="rage">
-              <p id="backend">Back End</p>
-          </div>
+        <div id="storage">
+          <img id="address" src="storage.png">
+        </div>
 
 
-          <div id="rem" class="lorem">
-                <p  class="ipsum">Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit. Duis a<br>metus ac nulla consequat aliquet<br>id quis turpis.</p>
-          </div>
+        <div id="rage">
+          <p id="backend">Back End</p>
+        </div>
 
 
-          <div  id="thirdgetstarted" class="getstarted">
-                  <p class="started">Get started</p>  
-          </div>
-
-  </div>
-
+        <div id="rem" class="lorem">
+          <p class="ipsum">Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit. Duis a<br>metus ac nulla
+            consequat aliquet<br>id quis turpis.</p>
+        </div>
 
 
+        <div id="thirdgetstarted" class="getstarted">
+          <p class="started">Get started</p>
+        </div>
 
-</div>
+      </div>
 
-<div id="gooddesign">
-  <p id="design">Good design means <br>good business</p>
-</div>
 
-<div id="dashboard-onboardcon">
 
-    <div id="dash">
-
-          <div id="dashboardcontainer">
-            <img id="smarthome" src="smarthome.jpg">
-          </div>
-
-          <div id="fullstack">
-            <p id="full">Full stack apllication</p>
-          </div>
-
-          <div id="smart">
-            <p id="home">Smart home dashboard</p>
-          </div>
 
     </div>
-    
-    <div id="on">
 
-          <div id="onboard">
-            <img id="application" src="onboard.png">
-          </div>
+    <div id="gooddesign">
+      <p id="design">Good design means <br>good business</p>
+    </div>
 
-          <div id="uix">
-            <p id="full">UX/UI design</p>
-          </div>
+    <div id="dashboard-onboardcon">
 
-          <div id="onboard-application">
-            <p id="app">Onboard application</p>
-          </div>
+      <div id="dash">
 
-    </div>      
+        <div id="dashboardcontainer">
+          <img id="smarthome" src="smarthome.jpg">
+        </div>
 
-</div>  
+        <div id="fullstack">
+          <p id="full">Full stack apllication</p>
+        </div>
 
-<div id="book-juicecon">
+        <div id="smart">
+          <p id="home">Smart home dashboard</p>
+        </div>
 
-    <div id="bookcon">
+      </div>
 
-          <div id="bookingsystemcontainer">
-            <img id="bookingimg" src="booking.png">
-          </div>
+      <div id="on">
 
-          <div id="mobile-application">
-            <p id="mobile">Mobile application</p>
-          </div>
+        <div id="onboard">
+          <img id="application" src="onboard.png">
+        </div>
 
-          <div id="bookingsystem">
-            <p id="books">Booking system</p>
-          </div>
+        <div id="uix">
+          <p id="full">UX/UI design</p>
+        </div>
 
-    </div>      
+        <div id="onboard-application">
+          <p id="app">Onboard application</p>
+        </div>
 
-    <div id="juicecon">
+      </div>
 
-          <div id="juiceproductcon">
-            <img id="juice" src="juice-product.png">
-          </div>
+    </div>
 
-          <div id="frontendapp">
-            <p id="frontendapplication">Front End application</p>
-          </div>
+    <div id="book-juicecon">
 
-          <div id="juiceproducthome">
-            <p id="juiceproducthomepage">Juice product homepage</p>
-          </div>
-    </div>      
+      <div id="bookcon">
 
+        <div id="bookingsystemcontainer">
+          <img id="bookingimg" src="booking.png">
+        </div>
 
-</div>
+        <div id="mobile-application">
+          <p id="mobile">Mobile application</p>
+        </div>
 
+        <div id="bookingsystem">
+          <p id="books">Booking system</p>
+        </div>
 
-<div id="seemorecon">
-  <p id="seemore">see more</p>
-</div>
+      </div>
 
-<div id="arrow">
-  <img id="arrowicon" src="arrow.jpg">
-</div>
+      <div id="juicecon">
 
-<div id="meet">
-  <p id="team">Meet the team</p>
-</div>
+        <div id="juiceproductcon">
+          <img id="juice" src="juice-product.png">
+        </div>
 
-<div id="chilled">
-  <p id="chilledteam">We are a chilled <br>and laidback <br>team</p>
-</div>
+        <div id="frontendapp">
+          <p id="frontendapplication">Front End application</p>
+        </div>
 
-<div id="dolorcon">
-  <p id="dolor">Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit.</p>
-</div>
-
-<div id="people">
-
-<div id="firstperson">
-  <img id="firstpersonimg"  src="person3.png">
-</div>
-
-<div id="ndpeople">
-<div id="secondperson">
-  <img id="secondpersonimg" src="person1.png">
-</div>
-
-<div id="thirdperson">
-  <img src="person2.png" id="thirdpersonimg">
-</div>
-</div>
-
-</div>
-
-<div id="result">
-  <p id="fastresult">“Fast and outstanding results. Edie understands <br>their customer’s needs. They have a young <br>and talented team.”    </p>
-</div>
-
-<div id="carlos">
-  <img src="person4.png" id="carlosimg">
-</div>
+        <div id="juiceproducthome">
+          <p id="juiceproducthomepage">Juice product homepage</p>
+        </div>
+      </div>
 
 
-<div id="carlostrancon">
-  <p id="carlostran">Carlos Tran</p>
-</div>
-
-<div id="gatsby">
-  <p id="decorate">The Decorate Gatsby</p>
-</div>
-
-<div id="lastrectangle">
-  <div id="ndservices">
-    <p class="ndservice">Home</p>
-
-    <p class="ndservice">Services</p>
-
-    <p class="ndservice">Our Works</p>
-
-    <p class="ndservice">Clients</p>
-
-    <p class="ndservice">Contacts</p>
-</div>
-
-<div id="ndhead" class="head">
-  <p id="ndedie" class="edie">Edie</p>
-</div>
-
-<div id="ig">
-  <img id="instagram" src="instagram.svg">
-</div>
-
-<div id="in">
-  <img src="linkedin.svg">
-</div>
-
-<div id="twitter">
-  <img src="twitter.svg">
-</div>
-
-<div id="ndcontact" class="contact">
-
-  <div  class="outreach">
-    <label id="ndemail" class="email" for="Email">Want us to contact you?<input placeholder="Email" id="Email" name="Email"
-      class="block" type="email" required /></label>
-  </div>
-  <div id="join">
-    <input id="Join" type="submit" value="Join">
-    <!-- <p id="Join">Join</p> -->
-  </div>
-
-</div>
-
-<div id="footer">
-  <p id="foot">created by <bold id="user">itedje victor</bold> - devChallenges.io</p>
-</div>
+    </div>
 
 
+    <div id="seemorecon">
+      <p id="seemore">see more</p>
+    </div>
 
-</div>
+    <div id="arrow">
+      <img id="arrowicon" src="arrow.jpg">
+    </div>
 
-  
-</div>
-  
-  </body>
+    <div id="meet">
+      <p id="team">Meet the team</p>
+    </div>
+
+    <div id="chilled">
+      <p id="chilledteam">We are a chilled <br>and laidback <br>team</p>
+    </div>
+
+    <div id="dolorcon">
+      <p id="dolor">Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit.</p>
+    </div>
+
+    <div id="people">
+
+      <div id="firstperson">
+        <img id="firstpersonimg" src="person3.png">
+      </div>
+
+      <div id="ndpeople">
+        <div id="secondperson">
+          <img id="secondpersonimg" src="person1.png">
+        </div>
+
+        <div id="thirdperson">
+          <img src="person2.png" id="thirdpersonimg">
+        </div>
+      </div>
+
+    </div>
+
+    <div id="result">
+      <p id="fastresult">“Fast and outstanding results. Edie understands <br>their customer’s needs. They have a young
+        <br>and talented team.” </p>
+    </div>
+
+    <div id="carlos">
+      <img src="person4.png" id="carlosimg">
+    </div>
+
+
+    <div id="carlostrancon">
+      <p id="carlostran">Carlos Tran</p>
+    </div>
+
+    <div id="gatsby">
+      <p id="decorate">The Decorate Gatsby</p>
+    </div>
+
+    </div>
+  <footer id="lastrectangle">
+    <div id="ndservices">
+      <p class="ndservice">Home</p>
+
+      <p class="ndservice">Services</p>
+
+      <p class="ndservice">Our Works</p>
+
+      <p class="ndservice">Clients</p>
+
+      <p class="ndservice">Contacts</p>
+    </div>
+
+    <div id="ndhead" class="head">
+      <p id="ndedie" class="edie">Edie</p>
+    </div>
+
+    <div id="ig">
+      <img id="instagram" src="instagram.svg">
+    </div>
+
+    <div id="in">
+      <img src="linkedin.svg">
+    </div>
+
+    <div id="twitter">
+      <img src="twitter.svg">
+    </div>
+
+    <div id="ndcontact" class="contact">
+
+      <div class="outreach">
+        <label id="ndemail" class="email" for="Email">Want us to contact you?<input placeholder="Email" id="Email"
+            name="Email" class="block" type="email" required /></label>
+      </div>
+
+      <div id="join">
+        <input id="Join" type="submit" value="Join">
+      </div>
+
+    </div>
+
+    <div id="footer">
+      <p id="foot">created by <bold id="user">itedje victor</bold> - devChallenges.io</p>
+    </div>
+
+
+
+  </footer>
+
+</body>
+
 </html>
